# datanexus

./: .env.example  .gitignore  .npmrc  .vercelignore  Anchor.toml  DATABASE_SCHEMA_DOCUMENTATION.md  DIRECT_VERCEL_DEPLOYMENT.md  DOCUMENTATION_CLEANUP_PLAN.md  FINAL_CLEANUP_SUMMARY.md  FIXES_SUMMARY.md  HACKATHON_SUBMISSION.md  LICENSE  PPT_OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REPUTATION_UI_INTEGRATION.md  ROADMAP.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_ENV_SECURITY_GUIDE.md  deploy-to-vercel.sh  deploy-with-env.sh  next.config.js  package-lock.json  package.json  pre_submission_check.sh  quick-deploy.sh  tsconfig.json  vercel.json
app/: layout.tsx  page.tsx
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BUYER_GUIDE.md  DOCUMENTATION_MAP.md  EIGENAI_INTEGRATION_GUIDE.md  HYBRID_ENCRYPTION_GUIDE.md  MARKETING_PLAYBOOK.md  PRIVATE_KEYS_EXPLAINED.md  README.md  USER_STORIES.md  X402_IMPLEMENTATION_GUIDE.md
examples/: README.md  demo_x402_complete_flow.py  requirements.txt  test-api.sh  test-demo-agent.py  test-eigenai-integration.sh  test-multiple-datasets.py  test-x402-complete.py  test-x402.sh
lib/: anchor-escrow-client.ts  anchor-escrow.ts  api-auth.ts  auth.ts  eigenai-client.ts  encryption.ts  irys.ts  onchain-reputation.ts  onchain-sync.ts  prisma.ts  redis.ts  refund.ts  reputation.ts  swagger.ts  x402-middleware.ts  x402.ts
prisma/: schema.prisma
programs/escrow/: Cargo.toml  README.md
programs/escrow/src/: lib.rs
public/: debug-auth.html  presentation.html
scripts/: check-dataset.ts  check-environment.sh  (+10 more)
(+123 files in other folders)
