[package]
name = "datanexus-escrow"
version = "0.1.0"
description = "DataNexus Escrow Program - Trustless escrow for data marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "datanexus_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

